# ORBITX

./: .env.example  .gitignore  CLAUDE.md  DESIGN.md  PRODUCT.md  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts
.claude/agents/: python-reviewer.md  rust-reviewer.md
.claude/commands/ecc/: code-review.md
.claude/commands/opsx/: harden.md  review.md
.claude/skills/icons/: ico_skill.skill
.claude/skills/openspec-review/: SKILL.md
.claude/skills/openspec-test-reinforce/: SKILL.md
.github/workflows/: release.yml  windows-build.yml  windows-test.yml
.impeccable/: design.json
docs/: PDR.md  SCHEMA.md
docs/MVP/: Roadmap.md
openspec/changes/fix-grab-inflight-flag-stuck/: design.md  proposal.md
openspec/changes/fix-windows-overlay-focus-loss/: design.md  proposal.md  tasks.md
openspec/changes/phase-5-extraction-pipeline/: design.md  proposal.md  tasks.md
openspec/changes/windows-ci-build/: design.md  (+2 more)
scripts/: diagnose_windows_imports.py  trace_loader_failure.py
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: errors.rs  lib.rs  main.rs  overlay_position.rs
src-tauri/src/commands/: extraction.rs  grab.rs  greet.rs  log.rs  mod.rs  model_config.rs  task.rs
src-tauri/src/db/: migrations.rs  mod.rs  state.rs
src-tauri/src/grab/: clipboard.rs  constants.rs  macos.rs  mod.rs  state.rs  uia_utils.rs  windows.rs
src-tauri/src/models/: extraction.rs  mod.rs  model_config.rs  task.rs
src-tauri/src/tray/: mod.rs
src/agent/: AgentContext.tsx  cleaner.ts  extractor.ts  index.ts  pipeline.ts  types.ts
src/components/: ConfirmDialog.tsx  ErrorBoundary.tsx  ExtractionListener.tsx  Header.tsx
src/hooks/: useGrabCompleted.ts  useTaskDraft.ts  useTaskList.ts
src/lib/: constants.ts  extraction-api.ts  logger.ts  navigation-guard.tsx  task-types.ts  task-validator.ts  truncate-middle.ts
src/routes/: __root.tsx  dashboard.tsx  overlay.tsx  settings.tsx  toast-overlay.tsx
src/styles/: globals.css
(+186 files in other folders)
