[package]
name = "orbitx"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
rusqlite = { version = "0.31", features = ["bundled"] }
rusqlite_migration = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
flexi_logger = { version = "0.29", features = ["async"] }

[dev-dependencies]
tauri = { version = "2", features = ["tray-icon", "test"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[lib]
name = "orbitx_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
