[package]
name = "orbitx"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
rusqlite = { version = "0.31", features = ["bundled"] }
rusqlite_migration = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
flexi_logger = { version = "0.29", features = ["async"] }
tauri-plugin-global-shortcut = "2"
tokio = { version = "1", features = ["time"] }
dotenvy = "0.15"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
objc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = ["Win32_UI_Accessibility", "Win32_System_Com", "Win32_System_Com_StructuredStorage", "Win32_System_DataExchange", "Win32_UI_Input_KeyboardAndMouse", "Win32_System_Ole", "Win32_Graphics_Gdi", "Win32_System_Memory", "Win32_UI_HiDpi", "Win32_UI_WindowsAndMessaging"] }

[dev-dependencies]
tauri = { version = "2", features = ["tray-icon", "test"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[lib]
name = "orbitx_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[lints.rust]
unexpected_cfgs = "allow"
